--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <article id="work">
             <header>
               <h2 class="portfolio_title">Portfolio.</h2>
+              <p> Testing </p>
             </header>
             <div class="row columns clearfix">
               <div class="col1"></div>
